--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "ngx-socket-io": "^3.2.0",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
