added little animations on incoming messages, loading screen,etc.

--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@loadingio/transition.css/dist/transition.css",
+              "node_modules/@loadingio/loading.css/dist/loading.min.css"
               
             ],
             "scripts": [
-             
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -92,7 +96,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           }
         },
         "lint": {
